# parfold

./: LICENSE  Makefile  README.markdown  list-benchmarks.hs  parfold.cabal  uvec.hs
