Name:                   parfold
Version:                0.1.0.0
Cabal-Version:          >= 1.6
Synopsis:               Benchmarks for different parallel fold functions
Category:               Parallelism, Performance, Testing, Benchmarking
License:                BSD3
License-File:           LICENSE
Author:                 Sebastian Fischer
Maintainer:             Sebastian Fischer
Bug-Reports:            https://github.com/sebfisch/parfold/issues
Homepage:               https://github.com/sebfisch/parfold
Build-Type:             Simple

Extra-Source-Files:     README.markdown

Executable parfold-list-benchmarks
  Main-Is:              list-benchmarks.hs
  Build-Depends:        base >= 3 && < 5, 
                        criterion >= 0.5 && < 0.6,
                        parallel >= 1.0 && < 3.2,
                        containers >= 0.1 && < 0.5,
                        vector >= 0.7.1 && < 0.8,
                        mersenne-random >= 1.0 && < 1.1
  GHC-Options:          -threaded -rtsopts

Source-Repository head
  type:                 git
  location:             git://github.com/sebfisch/parfold.git
